Все кроме 1й лабы

--- a/Атрибуты и методы/Практические задания/task5_Figure_classmethod_staticmethod/task-info.yaml
+++ b/Атрибуты и методы/Практические задания/task5_Figure_classmethod_staticmethod/task-info.yaml
@@ -4,7 +4,7 @@ files:
   visible: true
   placeholders:
   - offset: 99
-    length: 330
+    length: 339
     placeholder_text: |-
       # TODO сделать методом класса
           def area(self, *args):
@@ -20,8 +20,8 @@ files:
       length: 330
       offset: 99
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       @classmethod
           def area(cls, *args):
@@ -33,29 +33,29 @@ files:
                   cls.area_by_height(*args)
               if len(args) == 3:
                   cls.area_by_angle(*args)
-  - offset: 435
-    length: 73
+  - offset: 458
+    length: 66
     placeholder_text: "def area_by_angle(self, a, b, angle):  # TODO сделать стати\
       ческим методом"
     initial_state:
       length: 73
       offset: 435
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       @staticmethod
           def area_by_angle(a, b, angle):
-  - offset: 627
-    length: 67
+  - offset: 657
+    length: 60
     placeholder_text: "def area_by_height(self, a, h):  # TODO сделать статическим\
       \ методом"
     initial_state:
       length: 67
       offset: 627
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       @staticmethod
           def area_by_height(a, h):
@@ -96,6 +96,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: "Fri, 19 Jan 2024 15:39:14 UTC"
 record: -1
 post_submission_on_open: true
