--- a/Атрибуты и методы/Практические задания/task4_Glass__class__name__/task-info.yaml
+++ b/Атрибуты и методы/Практические задания/task4_Glass__class__name__/task-info.yaml
@@ -29,5 +29,8 @@ files:
   text: |
     Glass(200, 100)
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 19 Jan 2024 15:35:02 UTC"
 record: -1
