--- a/Основы ООП/Практические задания/task1_Glass__init__/task-info.yaml
+++ b/Основы ООП/Практические задания/task1_Glass__init__/task-info.yaml
@@ -6,8 +6,8 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 144
-    length: 44
+  - offset: 135
+    length: 438
     placeholder_text: "...  # TODO инициализировать объект \"Стакан\""
     initial_state:
       length: 44
@@ -27,26 +27,26 @@ files:
               if occupied_volume < 0:
                   raise ValueError
               self.occupied_volume = occupied_volume  # объем жидкости в стакане
-  - offset: 222
+  - offset: 607
     length: 51
     placeholder_text: "...  # TODO инициализировать два объекта типа Glass"
     initial_state:
       length: 51
       offset: 222
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Solved
     encrypted_possible_answer: |-
       glass1 = Glass(200, 100)  # экземпляр класса
           glass2 = Glass(500, 50)  # экземпляр класса
-  - offset: 279
+  - offset: 760
     length: 57
     placeholder_text: '# TODO попробовать инициализировать не корректные объекты'
     initial_state:
       length: 57
       offset: 279
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Solved
     encrypted_possible_answer: |-
       incorrect_capacity_volume_type = ...
