--- a/Основы ООП/Практические задания/task2_Glass_attrs/task-info.yaml
+++ b/Основы ООП/Практические задания/task2_Glass_attrs/task-info.yaml
@@ -4,44 +4,44 @@ files:
   visible: true
   placeholders:
   - offset: 724
-    length: 44
+    length: 50
     placeholder_text: "...  # TODO инициализировать ещё один стакан"
     initial_state:
       length: 44
       offset: 724
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: "Glass(500, 50)  # экземпляр класса"
-  - offset: 779
-    length: 51
+  - offset: 785
+    length: 89
     placeholder_text: "...)  # TODO распечатать атрибуты экземпляра glass2"
     initial_state:
       length: 51
       offset: 779
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: "glass2.capacity_volume, glass2.occupied_volume)"
-  - offset: 882
-    length: 37
+  - offset: 926
+    length: 64
     placeholder_text: '#  TODO доливаем воды в первый стакан'
     initial_state:
       length: 37
       offset: 882
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: glass1.occupied_volume += 100
-  - offset: 1041
-    length: 28
+  - offset: 1112
+    length: 23
     placeholder_text: '#  TODO сравнить id объектов'
     initial_state:
       length: 28
       offset: 1041
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: "print(glass1 is glass2)  # проверяем, что это два\
       \ разных объекта"
   text: |
@@ -80,6 +80,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: "Fri, 19 Jan 2024 14:55:03 UTC"
 record: -1
 post_submission_on_open: true
