--- a/Атрибуты и методы/Лабораторная 2/Класс Book/task-info.yaml
+++ b/Атрибуты и методы/Лабораторная 2/Класс Book/task-info.yaml
@@ -14,14 +14,14 @@ files:
   visible: true
   placeholders:
   - offset: 188
-    length: 26
+    length: 144
     placeholder_text: '# TODO написать класс Book'
     initial_state:
       length: 26
       offset: 188
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       class Book:
           ...
@@ -53,5 +53,8 @@ files:
 
         print(list_books)  # проверяем метод __repr__
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 21 Jan 2024 15:18:07 UTC"
 record: -1
